{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 1134,
  "lineage": "da6b139b-8e1d-8ec0-2a20-4e40cabfcb94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2e4f3490ad2bbdc",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0c0b5f22df286785f",
            "domain": "vpc",
            "id": "eipalloc-0a2e4f3490ad2bbdc",
            "instance": "i-08e27e98a5fe0bf90",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04bf3ef51c9103127",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-44-218-73-60.compute-1.amazonaws.com",
            "public_ip": "44.218.73.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d68260aab8fb871",
            "associate_with_private_ip": "10.0.1.51",
            "association_id": "eipassoc-0faf2c86e2be6b6ad",
            "domain": "vpc",
            "id": "eipalloc-07d68260aab8fb871",
            "instance": "i-026440a684f85ebb6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e9345b7151791936",
            "private_dns": "ip-10-0-1-51.ec2.internal",
            "private_ip": "10.0.1.51",
            "public_dns": "ec2-52-200-126-90.compute-1.amazonaws.com",
            "public_ip": "52.200.126.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.soar-server-nic-1",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aef6ff1bc64cf2f0",
            "associate_with_private_ip": "10.0.1.52",
            "association_id": "eipassoc-020112923bd617053",
            "domain": "vpc",
            "id": "eipalloc-0aef6ff1bc64cf2f0",
            "instance": "i-00efadbbb8147e072",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0807d822f264f08f8",
            "private_dns": "ip-10-0-1-52.ec2.internal",
            "private_ip": "10.0.1.52",
            "public_dns": "ec2-3-221-136-119.compute-1.amazonaws.com",
            "public_ip": "3.221.136.119",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.soar-server-nic-2",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064bc4184c01c6986",
            "associate_with_private_ip": "10.0.1.53",
            "association_id": "eipassoc-06557b1b75053269e",
            "domain": "vpc",
            "id": "eipalloc-064bc4184c01c6986",
            "instance": "i-0cc3b1762154db433",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d0395883e156268b",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-54-90-88-87.compute-1.amazonaws.com",
            "public_ip": "54.90.88.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.soar-server-nic-3",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012a77729e895dd7a",
            "associate_with_private_ip": "10.0.1.54",
            "association_id": "eipassoc-0d9296d2b2e9720eb",
            "domain": "vpc",
            "id": "eipalloc-012a77729e895dd7a",
            "instance": "i-0b7894532fd008960",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04f02e13b8980a3c2",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-35-172-84-38.compute-1.amazonaws.com",
            "public_ip": "35.172.84.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.soar-server-nic-4",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "soar-server-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b18e0c38e02712f1",
            "arn": "arn:aws:ec2:us-east-1:768298382555:instance/i-026440a684f85ebb6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026440a684f85ebb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "2023-0804",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e9345b7151791936"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9345b7151791936",
            "private_dns": "ip-10-0-1-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.51",
            "public_ip": "52.200.126.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-020399c7541799674",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336",
            "tags": {
              "Name": "soar-server-1"
            },
            "tags_all": {
              "Name": "soar-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085686681e38068af"
            ]
          },
          "dependencies": [
            "aws_eip.one-1",
            "aws_internet_gateway.gw",
            "aws_network_interface.soar-server-nic-1",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "soar-server-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b18e0c38e02712f1",
            "arn": "arn:aws:ec2:us-east-1:768298382555:instance/i-00efadbbb8147e072",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00efadbbb8147e072",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "2023-0804",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0807d822f264f08f8"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0807d822f264f08f8",
            "private_dns": "ip-10-0-1-52.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.52",
            "public_ip": "3.221.136.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-05f34762ab8f249c3",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336",
            "tags": {
              "Name": "soar-server-2"
            },
            "tags_all": {
              "Name": "soar-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085686681e38068af"
            ]
          },
          "dependencies": [
            "aws_eip.one-2",
            "aws_internet_gateway.gw",
            "aws_network_interface.soar-server-nic-2",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "soar-server-instance-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b18e0c38e02712f1",
            "arn": "arn:aws:ec2:us-east-1:768298382555:instance/i-0cc3b1762154db433",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc3b1762154db433",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "2023-0804",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d0395883e156268b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0395883e156268b",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "public_ip": "54.90.88.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-0256a24a7f8f0693e",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336",
            "tags": {
              "Name": "soar-server-3"
            },
            "tags_all": {
              "Name": "soar-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085686681e38068af"
            ]
          },
          "dependencies": [
            "aws_eip.one-3",
            "aws_internet_gateway.gw",
            "aws_network_interface.soar-server-nic-3",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "soar-server-instance-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b18e0c38e02712f1",
            "arn": "arn:aws:ec2:us-east-1:768298382555:instance/i-0b7894532fd008960",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7894532fd008960",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "2023-0804",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04f02e13b8980a3c2"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f02e13b8980a3c2",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_ip": "35.172.84.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-04b131e5d6cfa0cf0",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336",
            "tags": {
              "Name": "soar-server-4"
            },
            "tags_all": {
              "Name": "soar-server-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085686681e38068af"
            ]
          },
          "dependencies": [
            "aws_eip.one-4",
            "aws_internet_gateway.gw",
            "aws_network_interface.soar-server-nic-4",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b18e0c38e02712f1",
            "arn": "arn:aws:ec2:us-east-1:768298382555:instance/i-08e27e98a5fe0bf90",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e27e98a5fe0bf90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "2023-0804",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04bf3ef51c9103127"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04bf3ef51c9103127",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "44.218.73.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-0d5dc3ae52e994940",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336",
            "tags": {
              "Name": "soar-server"
            },
            "tags_all": {
              "Name": "soar-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085686681e38068af"
            ]
          },
          "dependencies": [
            "aws_db_instance.default",
            "aws_db_subnet_group.db_subnet_group_1",
            "aws_eip.one",
            "aws_internet_gateway.gw",
            "aws_lb.soar-lb",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:internet-gateway/igw-0656054f71fa30a5e",
            "id": "igw-0656054f71fa30a5e",
            "owner_id": "768298382555",
            "vpc_id": "vpc-01a5d315188a74970"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "soar-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:loadbalancer/app/test-lb-soar/8c075d25b7949dad",
            "arn_suffix": "app/test-lb-soar/8c075d25b7949dad",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-soar-1244877330.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:loadbalancer/app/test-lb-soar/8c075d25b7949dad",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-soar",
            "preserve_host_header": false,
            "security_groups": [
              "sg-085686681e38068af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-070c96c2f52074818"
              },
              {
                "subnet_id": "subnet-0a6fa7e57ab8b0336"
              }
            ],
            "subnets": [
              "subnet-070c96c2f52074818",
              "subnet-0a6fa7e57ab8b0336"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-01a5d315188a74970",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:listener/app/test-lb-soar/8c075d25b7949dad/092ee5832e9a772e",
            "certificate_arn": "arn:aws:acm:us-east-1:768298382555:certificate/cee27c32-022a-4c16-9715-92baab8bbf8a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:listener/app/test-lb-soar/8c075d25b7949dad/092ee5832e9a772e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:loadbalancer/app/test-lb-soar/8c075d25b7949dad",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.soar-lb",
            "aws_lb_target_group.https_service",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_listener_9999",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:listener/app/test-lb-soar/8c075d25b7949dad/d6034e1502c2f342",
            "certificate_arn": "arn:aws:acm:us-east-1:768298382555:certificate/cee27c32-022a-4c16-9715-92baab8bbf8a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:listener/app/test-lb-soar/8c075d25b7949dad/d6034e1502c2f342",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:loadbalancer/app/test-lb-soar/8c075d25b7949dad",
            "port": 9999,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.soar-lb",
            "aws_lb_target_group.https_service",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static-path",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-9999/d5af605f687a48bd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:listener-rule/app/test-lb-soar/8c075d25b7949dad/d6034e1502c2f342/50156c247e4ac6f5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/websocket"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:listener-rule/app/test-lb-soar/8c075d25b7949dad/d6034e1502c2f342/50156c247e4ac6f5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:listener/app/test-lb-soar/8c075d25b7949dad/d6034e1502c2f342",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.soar-lb",
            "aws_lb_listener.front_end_listener_9999",
            "aws_lb_target_group.https_service",
            "aws_lb_target_group.https_service_9999",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "https_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
            "arn_suffix": "targetgroup/target-group-for-https-service/a9723c4624e65ef8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/check",
                "port": "443",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-for-https-service",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 604800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a5d315188a74970"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "https_service_9999",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-9999/d5af605f687a48bd",
            "arn_suffix": "targetgroup/target-group-for-https-9999/d5af605f687a48bd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/check",
                "port": "9999",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-9999/d5af605f687a48bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-for-https-9999",
            "port": 9999,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 604800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a5d315188a74970"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attchment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8-2023090406255561790000000c",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
            "target_id": "i-026440a684f85ebb6"
          },
          "dependencies": [
            "aws_eip.one-1",
            "aws_instance.soar-server-instance-1",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.https_service",
            "aws_network_interface.soar-server-nic-1",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attchment-1-9999",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8-2023090406255509500000000b",
            "port": 9999,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
            "target_id": "i-026440a684f85ebb6"
          },
          "dependencies": [
            "aws_eip.one-1",
            "aws_instance.soar-server-instance-1",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.https_service",
            "aws_network_interface.soar-server-nic-1",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attchment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8-20230904062622080300000010",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
            "target_id": "i-00efadbbb8147e072"
          },
          "dependencies": [
            "aws_eip.one-2",
            "aws_instance.soar-server-instance-2",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.https_service",
            "aws_network_interface.soar-server-nic-2",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attchment-2-9999",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8-2023090406262201920000000f",
            "port": 9999,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
            "target_id": "i-00efadbbb8147e072"
          },
          "dependencies": [
            "aws_eip.one-2",
            "aws_instance.soar-server-instance-2",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.https_service",
            "aws_network_interface.soar-server-nic-2",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attchment-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8-2023090406260629220000000e",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
            "target_id": "i-0cc3b1762154db433"
          },
          "dependencies": [
            "aws_eip.one-3",
            "aws_instance.soar-server-instance-3",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.https_service",
            "aws_network_interface.soar-server-nic-3",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attchment-3-9999",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8-2023090406260625920000000d",
            "port": 9999,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768298382555:targetgroup/target-group-for-https-service/a9723c4624e65ef8",
            "target_id": "i-0cc3b1762154db433"
          },
          "dependencies": [
            "aws_eip.one-3",
            "aws_instance.soar-server-instance-3",
            "aws_internet_gateway.gw",
            "aws_lb_target_group.https_service",
            "aws_network_interface.soar-server-nic-3",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "soar-server-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:network-interface/eni-0e9345b7151791936",
            "attachment": [
              {
                "attachment_id": "eni-attach-08313cbc7145b1da0",
                "device_index": 0,
                "instance": "i-026440a684f85ebb6"
              }
            ],
            "id": "eni-0e9345b7151791936",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:59:db:0a:c2:99",
            "owner_id": "768298382555",
            "private_ip": "10.0.1.51",
            "private_ip_list": [
              "10.0.1.51"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.51"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-085686681e38068af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "soar-server-nic-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:network-interface/eni-0807d822f264f08f8",
            "attachment": [
              {
                "attachment_id": "eni-attach-032d49a0e19798a2c",
                "device_index": 0,
                "instance": "i-00efadbbb8147e072"
              }
            ],
            "id": "eni-0807d822f264f08f8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:05:8f:48:5b:eb",
            "owner_id": "768298382555",
            "private_ip": "10.0.1.52",
            "private_ip_list": [
              "10.0.1.52"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.52"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-085686681e38068af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "soar-server-nic-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:network-interface/eni-0d0395883e156268b",
            "attachment": [
              {
                "attachment_id": "eni-attach-051346622529124d4",
                "device_index": 0,
                "instance": "i-0cc3b1762154db433"
              }
            ],
            "id": "eni-0d0395883e156268b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:9e:f6:22:02:7f",
            "owner_id": "768298382555",
            "private_ip": "10.0.1.53",
            "private_ip_list": [
              "10.0.1.53"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.53"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-085686681e38068af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "soar-server-nic-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:network-interface/eni-04f02e13b8980a3c2",
            "attachment": [
              {
                "attachment_id": "eni-attach-046c6f643d6dfcdcf",
                "device_index": 0,
                "instance": "i-0b7894532fd008960"
              }
            ],
            "id": "eni-04f02e13b8980a3c2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:ef:5f:b8:22:33",
            "owner_id": "768298382555",
            "private_ip": "10.0.1.54",
            "private_ip_list": [
              "10.0.1.54"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.54"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-085686681e38068af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:network-interface/eni-04bf3ef51c9103127",
            "attachment": [
              {
                "attachment_id": "eni-attach-066b019f8c75047e6",
                "device_index": 0,
                "instance": "i-08e27e98a5fe0bf90"
              }
            ],
            "id": "eni-04bf3ef51c9103127",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:0d:a4:d6:9c:cb",
            "owner_id": "768298382555",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-085686681e38068af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa7e57ab8b0336"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:route-table/rtb-055b1a0c6ba8b35a4",
            "id": "rtb-055b1a0c6ba8b35a4",
            "owner_id": "768298382555",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0656054f71fa30a5e",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0656054f71fa30a5e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a5d315188a74970"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1f67f673f6c96e6",
            "route_table_id": "rtb-055b1a0c6ba8b35a4",
            "subnet_id": "subnet-0a6fa7e57ab8b0336"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ea7f35ed3b495e3",
            "route_table_id": "rtb-055b1a0c6ba8b35a4",
            "subnet_id": "subnet-070c96c2f52074818"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-2",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:security-group/sg-085686681e38068af",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085686681e38068af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Postgres-port",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all-port",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "768298382555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a5d315188a74970"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:subnet/subnet-0a6fa7e57ab8b0336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6fa7e57ab8b0336",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768298382555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet-1"
            },
            "tags_all": {
              "Name": "prod-subnet-1"
            },
            "vpc_id": "vpc-01a5d315188a74970"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:subnet/subnet-070c96c2f52074818",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070c96c2f52074818",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768298382555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet-2"
            },
            "tags_all": {
              "Name": "prod-subnet-2"
            },
            "vpc_id": "vpc-01a5d315188a74970"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768298382555:vpc/vpc-01a5d315188a74970",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0e61fe0b39ea3e6",
            "default_route_table_id": "rtb-0283a04914e697062",
            "default_security_group_id": "sg-0063dd0733feef25e",
            "dhcp_options_id": "dopt-88880cf2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a5d315188a74970",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0283a04914e697062",
            "owner_id": "768298382555",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}